# Tiggy_Wifi_Controller

./: .gitignore  LICENSE  README.md  SS_Plugin_ReverseEngineering.md  Tiggy_Plugin_Manual.md
.github/: FUNDING.yml
docs/: engineering_reference.html  index.html  manifest-esp32s3-devkitc-quad.json  manifest-esp32s3-devkitc.json  manifest-esp32s3-zero.json  plugin_manual.html
firmware/: CMakeLists.txt  null  partitions.csv  platformio.ini  sdkconfig.defaults  sdkconfig.defaults.devkitc_octal  sdkconfig.esp32s3-zero
firmware/main/: CMakeLists.txt  config.h  main.c  pin_config.h
firmware/main/gcode/: gcode_arcs.c  gcode_arcs.h  gcode_interface.c  gcode_interface.h  gcode_jog.c  gcode_jog.h  gcode_parser.c  gcode_parser.h  gcode_planner.c  gcode_planner.h  gcode_telnet.c  gcode_telnet.h  gcode_uart.c  gcode_uart.h  grbl_settings.c  grbl_settings.h
firmware/main/io/: gpio_control.c  gpio_control.h  io_module.c  io_module.h  spindle_encoder.c  spindle_encoder.h  status_led.c  status_led.h
firmware/main/motion/: motion_control.c  motion_control.h  planner.c  planner.h  stepper.c  stepper.h
firmware/main/network/: captive_portal.c  captive_portal.h  eth_manager.c  eth_manager.h  protocol_handler.c  protocol_handler.h  tcp_server.c  tcp_server.h  udp_server.c  udp_server.h  wifi_manager.c  wifi_manager.h
firmware/main/persist/: nvs_config.c  nvs_config.h
firmware/main/status/: status_reporter.c  status_reporter.h
linuxcnc/: build.sh  install.desktop  install.sh  wifi_cnc.c  wifi_cnc_setup.py
macros/: M62.m1s  M63.m1s  M64.m1s  M65.m1s
(+48 files in other folders)
